--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -37,6 +37,12 @@ helmOperator:
     certFile: "tls.crt"
     caContent: ""
     hostname: ""
+  # Mount repositories.yaml configuration in a volume
+  configureRepositories:
+    enable: false
+    volumeName: repositories-yaml
+    secretName: flux-helm-repositories
+    cacheVolumeName: repositories-cache
   # Override Flux git settings
   git:
     pollInterval: ""
