--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,6 +27,10 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
   version = "kubernetes-1.11.0"
 
 [[constraint]]
+  name = "k8s.io/apiextensions-apiserver"
+  version = "kubernetes-1.11.0"
+
+[[constraint]]
   name = "k8s.io/client-go"
   version = "8.0.0"
 
