--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -136,6 +136,10 @@ registry:
     region:
     includeId:
     excludeId:
+  # Azure ACR settings
+  acr:
+    enabled: false
+    hostPath: /etc/kubernetes/azure.json
 
 memcached:
   repository: memcached
