This provides the ability to set pod annotations for the flux and flux-helm pods when using the helm chart.

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -63,6 +63,7 @@ helmOperator:
   #   - name: FOO
   #     value: bar
   nodeSelector: {}
+  annotations: {}
   tolerations: []
   affinity: {}
   resources:
@@ -87,6 +88,8 @@ resources:
     memory: 64Mi
 
 nodeSelector: {}
+
+annotations: {}
 
 tolerations: []
 
