--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -15,9 +15,12 @@ spec:
       release: {{ .Release.Name }}
   template:
     metadata:
-      {{- if .Values.prometheus.enabled }}
       annotations:
+      {{- if .Values.prometheus.enabled }}
         prometheus.io.scrape: "true"
+      {{- end }}
+      {{- if .Values.annotations }}
+      {{- .Values.annotations | toYaml | trimSuffix "\n" | nindent 8 }}
       {{- end }}
       labels:
         app: {{ template "flux.name" . }}
