Add force upgrade field to CRD

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -40,6 +40,10 @@ spec:
               format: int64
             resetValues:
               type: boolean
+            skipDepUpdate:
+              type: boolean
+            forceUpgrade:
+              type: boolean
             valueFileSecrets:
               type: array
               properties:
