--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -33,6 +33,8 @@ spec:
               type: boolean
             skipDepUpdate:
               type: boolean
+            forceUpgrade:
+              type: boolean
             valueFileSecrets:
               type: array
               properties:
