--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -58,6 +58,12 @@ spec:
           path: "{{ .Values.registry.acr.hostPath }}"
           type: ""
       {{- end }}
+      {{- if .Values.registry.dockercfg.enabled }}
+      - name: docker-credentials
+        secret:
+          secretName: "{{ .Values.registry.dockercfg.secretName }}"
+          defaultMode: 0400
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -82,6 +88,11 @@ spec:
           {{- if .Values.registry.acr.enabled }}
           - name: acr-credentials
             mountPath: /etc/kubernetes/azure.json
+            readOnly: true
+          {{- end }}
+          {{- if .Values.registry.dockercfg.enabled }}
+          - name: docker-credentials
+            mountPath: /dockercfg/
             readOnly: true
           {{- end }}
           env:
@@ -131,6 +142,9 @@ spec:
           {{- end }}
           {{- if .Values.registry.ecr.excludeId }}
           - --registry-ecr-exclude-id={{ .Values.registry.ecr.excludeId }}
+          {{- end }}
+          {{- if .Values.registry.dockercfg.enabled }}
+          - --docker-config=/dockercfg/.dockerconfigjson
           {{- end }}
           {{- if .Values.token }}
           - --connect=wss://cloud.weave.works/api/flux
