Make sure git ignores downloaded test binaries

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ testdata/sidecar/sidecar-linux-amd64
 testdata/sidecar/.sidecar
 docker/fluxy-dumbconf.priv
 test/profiles
+test/bin/kubectl
+test/bin/helm
