--- a/deploy/memcache-dep.yaml
+++ b/deploy/memcache-dep.yaml
@@ -20,8 +20,9 @@ spec:
         image: memcached:1.4.25
         imagePullPolicy: IfNotPresent
         args:
-        - -m 64    # Maximum memory to use, in megabytes. 64MB is default.
-        - -p 11211    # Default port, but being explicit is nice.
+        - -m 128   # Maximum memory to use, in megabytes
+        - -I 5m    # Maximum size for one item
+        - -p 11211 # Default port
         # - -vv    # Uncomment to get logs of each request and response.
         ports:
         - name: clients
