nitpick: `flux` -> `Flux`
for those bean-counters in the audience I timed it: this change took 2m21s

--- a/test/flux-deploy-all.yaml
+++ b/test/flux-deploy-all.yaml
@@ -36,7 +36,7 @@ spec:
   selector:
     name: memcached
 ---
-# Expose flux to fluxctl
+# Expose Flux to fluxctl
 apiVersion: v1
 kind: Service
 metadata:
