added option to override the default ssh option

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -38,6 +38,12 @@ spec:
       {{- if .Values.ssh.known_hosts }}
       - name: sshdir
         configMap:
+          name: {{ template "flux.fullname" . }}-known-hosts
+          defaultMode: 0600
+      {{- end }}
+      {{- if .Values.ssh.config }}
+      - name: sshconfigdir
+        configMap:
           name: {{ template "flux.fullname" . }}-ssh-config
           defaultMode: 0600
       {{- end }}
@@ -78,6 +84,11 @@ spec:
           {{- if .Values.ssh.known_hosts }}
           - name: sshdir
             mountPath: /root/.ssh
+            readOnly: true
+          {{- end }}
+          {{- if .Values.ssh.config }}
+          - name: sshconfigdir
+            mountPath: /etc/ssh
             readOnly: true
           {{- end }}
           - name: git-key
