--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,14 @@ jobs:
               RELEASE_TAG=$(echo "$CIRCLE_TAG" | cut -c 6-)
               docker push "quay.io/weaveworks/helm-operator:${RELEASE_TAG}"
             fi
+  e2e-testing:
+    machine: true
+    working_directory: /go/src/github.com/weaveworks/flux
+    steps:
+      - checkout
+      - run: test/e2e/e2e-kind.sh
+      - run: test/e2e/e2e-helm.sh
+      - run: test/e2e/e2e-git.sh
 
 workflows:
   version: 2
