--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,7 @@ workflows:
           filters:
             tags:
               only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z]+)?/
+      - e2e-testing:
+          filters:
+            tags:
+              only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z]+)?/
