--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - run: test/e2e/e2e-kind.sh
       - run: test/e2e/e2e-helm.sh
       - run: test/e2e/e2e-git.sh
+      - run: test/e2e/e2e-flux-chart.sh
 
 workflows:
   version: 2
