Load local Flux image into K8s Kind

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
     steps:
       - checkout
       - run: test/e2e/e2e-golang.sh
+      - run: test/e2e/e2e-flux-build.sh
       - run: test/e2e/e2e-kind.sh
       - run: test/e2e/e2e-helm.sh
       - run: test/e2e/e2e-git.sh
