--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -21,7 +21,7 @@ spec:
     openAPIV3Schema:
       properties:
         spec:
-          required: ['values', 'chart']
+          required: ['chart']
           properties:
             releaseName:
               type: string
