Define custom Helm repositories in the Helm chart
This simplifies using custom Helm repositories and generates a
`repositories.yaml` for the Helm operator.

Relates to #1862

Signed-off-by: Simon Rüegg <simon.ruegg@vshn.ch>

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -47,6 +47,11 @@ helmOperator:
     volumeName: repositories-yaml
     secretName: flux-helm-repositories
     cacheVolumeName: repositories-cache
+    repositories:
+      # - name: bitnami
+      #   url: https://charts.bitnami.com
+      #   username:
+      #   password:
   # Override Flux git settings
   git:
     pollInterval: ""
