Capitalise comment in helm chart
Co-Authored-By: benhartley <benhartley@users.noreply.github.com>

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -202,7 +202,7 @@ kube:
     kind: Config
     preferences: {}
     users: []
-# for https://github.com/justinbarrick/fluxcloud/
+# For https://github.com/justinbarrick/fluxcloud/
 # additionalArgs:
 # - --connect=ws://fluxcloud
 
