--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -105,6 +105,9 @@ spec:
         # replace or remove the following URL
         - --git-url=git@github.com:weaveworks/flux-get-started
         - --git-branch=master
+        # include this if you want to restrict the manifests considered by flux
+        # to those under the following relative paths in the git repository
+        # - --git-paths=subdir1,subdir2
 
         # include these next two to connect to an "upstream" service
         # (e.g., Weave Cloud). The token is particular to the service.
