--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -222,10 +222,10 @@ prometheus:
 
 # Add your own init container or uncomment and modify the given example.
 initContainers: {}
-  # flux-init:  # <- will be used as container name
-  #   image: "busybox:1.30.1"
-  #   imagePullPolicy: "IfNotPresent"
-  #   command: ['sh', '-c', 'counter=0; until [ "$counter" -ge 30 ]; do if [ -f /tmp/flux-deploy-key/xyz.key ]; then exit 0; else echo waiting for flux deploy key && sleep 1 && counter=$((counter+1)); fi; done; exit 1;']
-  #   volumeMounts:
-  #     - mountPath: /tmp/flux-deploy-key
-  #       name: flux-deploy-key
+#   flux-init:  # <- will be used as container name
+#     image: "busybox:1.30.1"
+#     imagePullPolicy: "IfNotPresent"
+#     command: ['sh', '-c', 'counter=0; until [ "$counter" -ge 30 ]; do if [ -f /tmp/flux-deploy-key/identity ]; then exit 0; else echo waiting for flux deploy key && sleep 1 && counter=$((counter+1)); fi; done; exit 1;']
+#     volumeMounts:
+#       - mountPath: /tmp/flux-deploy-key
+#         name: flux-deploy-key
