--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -1,4 +1,5 @@
 {{- $gitTimeout := default .Values.git.timeout .Values.helmOperator.git.timeout }}
+{{- $gitPollInterval := default .Values.git.pollInterval .Values.helmOperator.git.pollInterval }}
 {{- if .Values.helmOperator.create -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -104,6 +105,7 @@ spec:
         {{- end }}
         args:
         - --git-timeout={{ $gitTimeout }}
+        - --git-poll-interval={{ $gitPollInterval }}
         - --charts-sync-interval={{ .Values.helmOperator.chartsSyncInterval }}
         - --update-chart-deps={{ .Values.helmOperator.updateChartDeps }}
         - --log-release-diffs={{ .Values.helmOperator.logReleaseDiffs }}
