Adding chartFileRef option to valuesFrom.

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -83,10 +83,19 @@ spec:
                         type: string
                       optional:
                         type: boolean
+                  chartFileRef:
+                    type: object
+                    required: ['path']
+                    properties:
+                      path:
+                        type: string
+                      optional:
+                        type: boolean
                 oneOf:
                 - required: ['configMapKeyRef']
                 - required: ['secretKeyRef']
                 - required: ['externalSourceRef']
+                - required: ['chartFileRef']
             values:
               type: object
             chart:
