--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -74,10 +74,19 @@ spec:
                         type: string
                       optional:
                         type: boolean
+                  chartFileRef:
+                    type: object
+                    required: ['path']
+                    properties:
+                      path:
+                        type: string
+                      optional:
+                        type: boolean
                 oneOf:
                 - required: ['configMapKeyRef']
                 - required: ['secretKeyRef']
                 - required: ['externalSourceRef']
+                - required: ['chartFileRef']
             values:
               type: object
             chart:
