Fix hardcoded docker config file (#1)
Add parameter and default value in place of hard-coded /dockercfg/config.json

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -163,7 +163,7 @@ spec:
           - --registry-require=ecr
           {{- end }}
           {{- if .Values.registry.dockercfg.enabled }}
-          - --docker-config=/dockercfg/config.json
+          - --docker-config={{ .Values.registry.dockercfg.configFileName }}
           {{- end }}
           {{- if .Values.token }}
           - --connect=wss://cloud.weave.works/api/flux
