--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -6,7 +6,7 @@ token: ""
 replicaCount: 1
 
 image:
-  repository: quay.io/weaveworks/flux
+  repository: docker.io/weaveworks/flux
   tag: 1.12.0
   pullPolicy: IfNotPresent
   pullSecret:
@@ -19,7 +19,7 @@ helmOperator:
   replicaCount: 1
   create: false
   createCRD: true
-  repository: quay.io/weaveworks/helm-operator
+  repository: docker.io/weaveworks/helm-operator
   tag: 0.8.0
   pullPolicy: IfNotPresent
   pullSecret:
