--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -52,9 +52,9 @@ spec:
       containers:
       - name: flux
         # There are no ":latest" images for flux. Find the most recent
-        # release or image version at https://quay.io/weaveworks/flux
+        # release or image version at https://hub.docker.com/r/weaveworks/flux/tags
         # and replace the tag here.
-        image: quay.io/weaveworks/flux:1.12.0
+        image: docker.io/weaveworks/flux:1.12.0
         imagePullPolicy: IfNotPresent
         resources:
           requests:
