--- a/test/flux-deploy-all.yaml
+++ b/test/flux-deploy-all.yaml
@@ -76,7 +76,7 @@ spec:
       containers:
       - name: flux
         # Require locally built image
-        image: quay.io/weaveworks/flux:latest
+        image: docker.io/weaveworks/flux:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 3030 # informational
