--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,16 @@ jobs:
       - run: make all
 
       - deploy:
-          name: Maybe push master image
+          name: Maybe push prerelease images
           command: |
             if [ -z "${CIRCLE_TAG}" -a "${CIRCLE_BRANCH}" == "master" ]; then
-              echo "$DOCKER_REGISTRY_PASSWORD" | docker login --username "$DOCKER_REGISTRY_USER" --password-stdin 
-              docker push "docker.io/weaveworks/flux:$(docker/image-tag)"
-              docker push "docker.io/weaveworks/helm-operator:$(docker/image-tag)"
+              echo "$DOCKER_REGISTRY_PASSWORD" | docker login --username "$DOCKER_REGISTRY_USER" --password-stdin
+
+              docker tag "docker.io/weaveworks/flux:$(docker/image-tag)" "docker.io/weaveworks/flux-prerelease:$(docker/image-tag)"
+              docker push "docker.io/weaveworks/flux-prerelease:$(docker/image-tag)"
+
+              docker tag "docker.io/weaveworks/helm-operator:$(docker/image-tag)" "docker.io/weaveworks/helm-operator-prerelease:$(docker/image-tag)"
+              docker push "docker.io/weaveworks/helm-operator-prerelease:$(docker/image-tag)"
             fi
 
       - deploy:
