Use github.com/2opremio/distribution instead of docker/distribution
This change is needed until https://github.com/docker/distribution/pull/2905
is merged.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -11,6 +11,7 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   name = "github.com/docker/distribution"
   branch = "master"
+  source = "github.com/2opremio/distribution"
 
 # Pin to master branch until there is a more recent stable release:
 #   https://github.com/prometheus/client_golang/issues/375
