--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -41,6 +41,11 @@ spec:
           name: {{ template "flux.fullname" . }}-ssh-config
           defaultMode: 0600
       {{- end }}
+      {{- if .Values.git.config }}
+      - name: gitconfig
+        configMap:
+          name: {{ template "flux.fullname" . }}-gitconfig
+      {{- end }}
       - name: git-key
         secret:
           {{- if .Values.helmOperator.git.secretName }}
@@ -82,6 +87,12 @@ spec:
         - name: sshdir
           mountPath: /root/.ssh/known_hosts
           subPath: known_hosts
+          readOnly: true
+        {{- end }}
+        {{- if .Values.git.config }}
+        - name: gitconfig
+          mountPath: /root/.gitconfig
+          subPath: .gitconfig
           readOnly: true
         {{- end }}
         - name: git-key
