explain where to point browser

--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -10,3 +10,4 @@ RUN pip install 'sphinx_markdown_tables'		\
 #
 # to serve docs on :8000, run:
 # docker run -i -v `pwd`:/doc -e USER_ID=$UID -p 8000:8000 <image> python -m http.server 8000
+# and point your browser to: http://localhost:8000/_build/html/index.html
