--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install 'sphinx_markdown_tables'		\
 # docker build
 #
 # to build docs, run:
-# docker run -i -v `pwd`:/doc -e USER_ID=$UID -p 8000:8000 <image> make html
+# docker run -i -v `pwd`:/doc -e USER_ID=$UID <image> make html
 #
 # to serve docs on :8000, run:
 # docker run -i -v `pwd`:/doc -e USER_ID=$UID -p 8000:8000 <image> python -m http.server 8000
