fix links, work around our current link issues
	- anchors in our own files [file.md#anchor]
	- links in markdown tables
	- missing symlink to font file

--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -9,7 +9,9 @@ WORKDIR /doc
 
 COPY . .
 
-RUN make html
+RUN make html && \
+    cd /doc/_build/html/_static/fonts/RobotoSlab && \
+    ln -s roboto-slab-v7-regular.eot roboto-slab.eot
 
 CMD ["python", "-m", "http.server", "8000"]
 
