Fix usage of .Release.Namespace in kubeconfig
This is probably a typo since using the often auto-generates release
name as a namespace doesn't ake a lot sense.

--- a/chart/flux/templates/kube.yaml
+++ b/chart/flux/templates/kube.yaml
@@ -10,7 +10,7 @@ data:
     contexts:
     - context:
         cluster: ""
-        namespace: {{ .Release.Name }}
+        namespace: {{ .Release.Namespace }}
         user: ""
       name: default
     current-context: default
