--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -2,8 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flux{{ if .Namespace }}
-  namespace: {{ .Namespace }}{{ end }}
+  name: flux
 spec:
   replicas: 1
   selector:
@@ -14,7 +13,7 @@ spec:
   template:
     metadata:
       annotations:
-        prometheus.io/port: "3031" # tell prometheus to scrape /metrics endpoint's port.
+        prometheus.io.port: "3031" # tell prometheus to scrape /metrics endpoint's port.
       labels:
         name: flux
     spec:
@@ -64,7 +63,7 @@ spec:
         # There are no ":latest" images for flux. Find the most recent
         # release or image version at https://hub.docker.com/r/weaveworks/flux/tags
         # and replace the tag here.
-        image: docker.io/fluxcd/flux:1.13.3
+        image: docker.io/fluxcd/flux:1.13.2
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -119,15 +118,11 @@ spec:
         - --ssh-keygen-dir=/var/fluxd/keygen
 
         # Replace the following URL to change the Git repository used by Flux.
-        - --git-url={{ .GitURL }}
-        - --git-branch={{ .GitBranch }}{{ if .GitPaths }}
-        - --git-path={{ StringsJoin .GitPaths "," }}{{ else }}
+        - --git-url=git@github.com:weaveworks/flux-get-started
+        - --git-branch=master
         # include this if you want to restrict the manifests considered by flux
         # to those under the following relative paths in the git repository
-        # - --git-path=subdir1,subdir2{{ end }}{{ if .GitLabel }}
-        - --git-label={{ .GitLabel }}{{ end }}{{ if .GitUser }}
-        - --git-user={{ .GitUser   }}{{ end }}{{ if .GitEmail }}
-        - --git-email={{ .GitEmail }}{{ end }}
+        # - --git-path=subdir1,subdir2
 
         # Include these two to enable git commit signing
         # - --git-gpg-key-import=/root/gpg-import
@@ -144,9 +139,7 @@ spec:
         # Serve /metrics endpoint at different port;
         # make sure to set prometheus' annotation to scrape the port value.
         - --listen-metrics=:3031
-{{ if .AdditionalFluxArgs }}
-        # Additional arguments{{ range .AdditionalFluxArgs }}
-        - {{ . }}{{ end }}{{ end }}
+
 
       # Optional DNS settings, configuring the ndots option may resolve
       # nslookup issues on some Kubernetes setups.
