--- a/deploy/memcache-dep.yaml
+++ b/deploy/memcache-dep.yaml
@@ -4,8 +4,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: memcached{{ if .Namespace }}
-  namespace: {{ .Namespace }}{{ end }}
+  name: memcached
 spec:
   replicas: 1
   selector:
