--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       annotations:
-        prometheus.io.port: "3031" # tell prometheus to scrape /metrics endpoint's port.
+        prometheus.io/port: "3031" # tell prometheus to scrape /metrics endpoint's port.
       labels:
         name: flux
     spec:
@@ -63,7 +63,7 @@ spec:
         # There are no ":latest" images for flux. Find the most recent
         # release or image version at https://hub.docker.com/r/weaveworks/flux/tags
         # and replace the tag here.
-        image: docker.io/fluxcd/flux:1.13.2
+        image: docker.io/fluxcd/flux:1.13.3
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -139,7 +139,6 @@ spec:
         # Serve /metrics endpoint at different port;
         # make sure to set prometheus' annotation to scrape the port value.
         - --listen-metrics=:3031
-
 
       # Optional DNS settings, configuring the ndots option may resolve
       # nslookup issues on some Kubernetes setups.
