add requirements.txt file for docs creation, add readthedocs.yml file too

--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,9 +1,9 @@
 FROM ddidier/sphinx-doc
 
+COPY requirements.txt .
+
 RUN apt update && apt install -y linkchecker && \
-    pip install 'sphinx                 == 2.1.2' \
-                'sphinx_markdown_tables == 0.0.9' \
-                'recommonmark           == 0.5.0'
+    pip install -r requirements.txt
 
 WORKDIR /doc
 
