Align GOPATH and checkout in CI
In general we use go mod(ules), so it doesn't matter where the code is
checked out. But: the script bin/helm/update_codegen.sh puts its
generated files in the location indicated by their package and
GOPATH. So the checkout and that location should be the same.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/flux
+    working_directory: /home/circleci/go/src/github.com/weaveworks/flux
     machine:
       image: ubuntu-1604:201903-01
     environment:
       GO_VERSION: 1.12.5
       # We don't need a GOPATH but CircleCI defines it, so we override it
       GOPATH: /home/circleci/go
+      GO111MODULE: 'on'
       PATH: /bin:/usr/bin:/usr/local/go/bin:/home/circleci/go/bin
     steps:
       - checkout
