Move manifestGeneration flag from git to root

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -186,7 +186,7 @@ spec:
           {{- if .Values.git.label }}
           - --git-label={{ .Values.git.label }}
           {{- end }}
-          {{- if .Values.git.manifestGeneration }}
+          {{- if .Values.manifestGeneration }}
           - --manifest-generation=true
           {{- end }}
           - --registry-poll-interval={{ .Values.registry.pollInterval }}
