Publish Helm chart on chart-* tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,3 +165,11 @@ workflows:
             tags:
               only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z]+)?/
 
+  release-helm:
+    jobs:
+      - helm:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^chart.*/
