Simplify the files included in kube-config in snapcraft.yaml
	As we can read more files this way, it will make
	fluxctl work in cases where
	   kind clusters have --name set.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -58,10 +58,8 @@ plugs:
   kube-config:
     interface: personal-files
     read:
-    - $HOME/.kube/config
-    - $HOME/.minikube/client.key
-    - $HOME/.minikube/client.crt
-    - $HOME/.minikube/ca.crt
+    - $HOME/.kube
+    - $HOME/.minikube
 
 apps:
   fluxctl:
