Update CircleCI work dir to github.com/fluxcd Setting the working dir outside GOPATH doesn't work for the embedded templates check

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
               echo "Not a chart release! Skip chart publish"
             fi
   build:
-    working_directory: /home/circleci/go/src/github.com/weaveworks/flux
+    working_directory: /home/circleci/go/src/github.com/fluxcd/flux
     machine:
       image: ubuntu-1604:201903-01
     environment:
